[tool.poetry]
name = "pubmed-papers-cli"
version = "0.1.0"
description = "Fetch PubMed papers with non-academic authors and export as CSV"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "fetch" }]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

[tool.poetry.scripts]
get-papers-list = "cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
